<resources>
    <string name="app_name">Calorie Tracker</string>
    <string name="user_login">User Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="tvcalorie">%d</string>
    <string name="userToken">userToken</string>
    <string name="time_ago_prefix"> </string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_hours">about %d hours</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">about a year</string>
    <string name="time_ago_years">%d years</string>
    <string name="am_format">%d:%d am</string>
    <string name="pm_format">%d:%d pm</string>
    <string name="today">Today</string>
    <string name="bearerTokenSuffix">Bearer</string>
    <string name="editMode">edit</string>
    <string name="calEntry">CalEntry</string>
    <string name="userFormat">User : %s</string>
    <string name="userMode">userMode</string>
    <string name="calLimitFormat"> / %d</string>
    <string name="loggedIn">loggedIn</string>
    <string name="validEmailPrompt">Please enter valid email</string>
    <string name="validPasswordPrompt">Password should be longer than 6</string>
    <string name="validNamePrompt">Full name cannot be blank</string>
    <string name="logOutPrompt">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteEntryPrompt">Do you want to delete this entry?</string>
    <string name="timePickerTitle">Entry time</string>
    <string name="dailyLimit">Daily Limit</string>
    <string name="limitPlaceholder">2100</string>
    <string name="user">User</string>
    <string name="save">Save</string>
    <string name="titleEntry">Add Entry</string>
    <string name="hintFoodName">Enter Food Name</string>
    <string name="hintCalorie">Enter Calorie</string>
    <string name="hintTime">Time</string>
    <string name="btnDailyLimitTitle">Edit daily limit</string>
    <string name="delete">Delete</string>
    <string name="hintEmail">Email Address</string>
    <string name="hintPassword">Password</string>
    <string name="btnTitleLogin">Login</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="titleCreateAccount">Create Account</string>
    <string name="report">Report</string>
    <string name="thisWeekEntries">Entries This week</string>
    <string name="lastWeekEntries">Entries Last week</string>
    <string name="kcal">kCal</string>
    <string name="per_user_this_week">Per User This week</string>
    <string name="per_user_last_week">Per User Last week</string>
    <string name="hintFullName">Full Name</string>
    <string name="btnTitleSignUP">Sign Up</string>
    <string name="btnTitleAdd">Add</string>
    <string name="percent">%</string>
    <string name="no_entry_found">No entry found</string>
    <string name="please_add_item">Please Add Item</string>
    <string name="dailyLimitConfirmation">Daily limit has been changed!</string>
    <string name="entryDeleteConfirmation">Entry has been deleted!</string>
    <string name="entrySavedConfirmation">Entry has been saved!</string>
</resources>