<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.dailylimit.DailyLimitActivity">



    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2B8A3E">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icBack"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:clickable="true"
            android:focusable="true"
            android:padding="14sp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:tint="@color/white" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10sp"
            android:layout_toEndOf="@+id/icBack"
            android:text="@string/dailyLimit"
            android:textColor="@color/white"
            android:textSize="18sp" />



    </RelativeLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:padding="@dimen/item_margin"
        android:gravity="center"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dailyLimit"
            app:startIconTint="@color/colorPrimary"
            app:startIconDrawable="@drawable/ic_baseline_exposure_plus_2_24"
            app:suffixText="kCal"
            app:hintAnimationEnabled="true"
            app:boxBackgroundColor="@color/white"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvDailyLimit"
                android:text="@string/limitPlaceholder"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            app:startIconTint="@color/colorPrimary"
            app:startIconDrawable="@drawable/ic_baseline_alarm_on_24"
            app:hintAnimationEnabled="true"
            app:boxBackgroundColor="@color/white"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvUserId"
                android:focusable="false"
                android:enabled="false"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/mProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:trackColor="@color/colorPrimary"
            android:visibility="invisible"
            android:layout_marginTop="20sp"
            app:indicatorColor="@color/white"
            android:indeterminate="true"/>


    </LinearLayout>




    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnPublishEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/white"
        android:layout_margin="20sp"
        app:backgroundTint="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        app:icon="@drawable/ic_baseline_save_24"
        android:focusable="true" />


</RelativeLayout>