<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.user.UserHomeActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2B8A3E">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icLogOut"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:clickable="true"
            android:focusable="true"
            android:padding="14sp"
            android:scaleX="-1"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_logout"
            android:tint="@color/white" />


        <TextView
            android:id="@+id/tvCurrentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/icLogOut"
            android:gravity="left"
            android:text="@string/report"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />



    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/statsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:visibility="gone"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:strokeWidth="1sp"
                    app:cardCornerRadius="0sp"
                    android:layout_weight="1"
                    app:strokeColor="#DCDCDC"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginEnd="5sp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/item_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvEntryThisWeek"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mbold"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/thisWeekEntries"
                            android:fontFamily="@font/mmedium"
                            android:gravity="center"
                            android:textColor="#8B939B"
                            android:textSize="11sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:strokeWidth="1sp"
                    app:cardCornerRadius="0sp"
                    android:layout_weight="1"
                    app:strokeColor="#DCDCDC"

                    android:layout_marginStart="5sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginEnd="10sp"
                    app:cardElevation="0dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/item_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvEntryLastWeek"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mbold"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lastWeekEntries"
                            android:fontFamily="@font/mmedium"
                            android:gravity="center"
                            android:textColor="#8B939B"
                            android:textSize="11sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>



            </LinearLayout>


            <LinearLayout
                android:id="@+id/statsLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:visibility="gone"
                android:orientation="horizontal">


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:strokeWidth="1sp"
                    android:layout_weight="1"
                    app:cardCornerRadius="0sp"
                    app:strokeColor="#DCDCDC"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginEnd="5sp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/item_margin"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|bottom"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvAvgCalorieThisWeek"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/mbold"
                                android:gravity="center"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/kcal"
                                android:layout_marginStart="5sp"
                                android:fontFamily="@font/mregular"
                                android:gravity="center"
                                android:textColor="#8B939B"
                                android:textSize="12sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/per_user_this_week"
                            android:gravity="center"
                            android:fontFamily="@font/mmedium"
                            android:textColor="#8B939B"
                            android:textSize="11sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:strokeWidth="1sp"
                    android:layout_weight="1"
                    app:cardCornerRadius="0sp"
                    app:strokeColor="#DCDCDC"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginEnd="10sp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/item_margin"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|bottom"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvAvgCalorieLastWeek"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/mbold"
                                android:gravity="center"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/kcal"
                                android:layout_marginStart="5sp"
                                android:fontFamily="@font/mregular"
                                android:gravity="center"
                                android:textColor="#8B939B"
                                android:textSize="12sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/per_user_last_week"
                            android:gravity="center"
                            android:fontFamily="@font/mmedium"
                            android:textColor="#8B939B"
                            android:textSize="11sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>



            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/docsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/item_margin" />



                <include
                    android:id="@+id/notEntryLayout"
                    layout="@layout/item_no_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>